# Grad-Program-NEU

./: README.md
Connected Device/: Project Report.md
Data Sci Ene Methods INFO 6105/Final Project/: readme.md
Data Sci Ene Methods INFO 6105/Lecture1/: Summary.md
Data Sci Ene Methods INFO 6105/Lecture1/Assignment1/: Description.md
Data Sci Ene Methods INFO 6105/W1L1/Assignment1/: Description.md
Data Sci Ene Methods INFO 6105/W1L2/: Summary.md
Data Sci Ene Methods INFO 6105/W2L2/: Assignment 3.ipynb  Summary of Introduction to Python Part3.md  Summary of Introduction to Python part2.md  Summary of Introduction to Python.md
Data Sci Ene Methods INFO 6105/W3L1/: Summary of Introduction to Numpy.md  Summary of Introduction-to-statistics-with-pandas-no-ml.md
Data Sci Ene Methods INFO 6105/W4L1/: Summary of Probability Part1.md
Data Sci Ene Methods INFO 6105/W4L2/: Sumary of Introduction to Probability Distribution.md
Data Sci Ene Methods INFO 6105/W5L1/: Summary of Introduction to Statistics.md
Data Sci Ene Methods INFO 6105/W5L2/: Summary of MOM and MLE.md
Data Sci Ene Methods INFO 6105/W6L1/: Basic Distribution.md
Data Sci Ene Methods INFO 6105/W6L2/: Bayesian Statistical Analysis and Probabilistic programming.md
IoT Embedded System Design/: ReadME.md
IoT Embedded System Design/Assignment2/: main.c  ml.py
IoT Embedded System Design/Assignment4/: readme.md
IoT Embedded System Design/Final Project/: Application Flowdrawio  CMakeLists.txt  CameraControl.cpp  Phototype.drawio  Untitled Diagram.drawio  readme.md
(+5 files in other folders)
